added the recycle bin to excludeDirs

--- a/configs/config.json
+++ b/configs/config.json
@@ -11,6 +11,7 @@
     ],
     "excludeDirs": [
         "C:/Windows/",
+        "C:/$Recycle.Bin/",
         "C:/Users/<USERNAME>/AppData/Local",
         "C:/Users/<USERNAME>/AppData/LocalLow"
     ],
